--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "datatables.net-dt": "^1.13.8",
+    "date-fns": "^3.3.1",
     "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.10.5",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.6.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.70.0"
   }
