--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "proxy": "http://localhost:3300",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "d3": "^7.8.5",
     "datatables.net-dt": "^1.13.8",
     "date-fns": "^3.3.1",
     "md5": "^2.3.0",
@@ -15,8 +19,11 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-move": "^6.5.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
+    "recharts": "^2.12.2",
     "sweetalert2": "^11.10.5",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
