--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "d3": "^7.8.5",
     "datatables.net-dt": "^1.13.8",
     "date-fns": "^3.3.1",
+    "faker": "^6.6.6",
+    "gsap": "^3.12.5",
     "md5": "^2.3.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-move": "^6.5.0",
