--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "reactstrap": "^9.2.2",
     "recharts": "^2.12.2",
     "sweetalert2": "^11.6.13",
     "sweetalert2-react-content": "^5.0.7",
